--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,10 @@
-version: '3.4'
+version: '3.0'
 services:
-
-  rasa-server:
-    image: rasa/rasa:1.10.7-full
-    working_dir: /app
-    build: "./"
-    restart: always
-    volumes:
-    - ./actions:/app/actions
-    - ./data:/app/data
-    command: bash -c "rm -rf models/* && rasa train && rasa run --enable-api --cors \"*\" --debug"
+  rasa:
+    image: rasa/rasa:3.2.0-full
     ports:
-    - '5006:5005'
-    #public: true
-    networks:
-    - all
-
-  rasa-actions-server:
-    image: rasa/rasa-sdk:1.10.2
-    working_dir: /app
-    build: "./"
-    restart: always
+      - 5005:5005
     volumes:
-    - ./actions:/app/actions
-    - ./utils:/app/utils
-    command: ["rasa", "run", "actions"]
-    ports:
-    - '5055:5055'
-    networks:
-    - all
-
-networks:
-  all:
-    driver: bridge
-    driver_opts:
-      com.docker.network.enable_ipv6: "true"
+      - ./:/app
+    command:
+      - run
