--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,24 @@
-version: '3.4'
+version: '3.0'
 services:
+    rasa:
+      container_name: "rasa_server"
+      build: 
+        context: .
+      volumes:
+      - "./:/app"
+      ports: 
+        - "5005:5005"
+      command:
+        - run
 
-  rasa-server:
-    image: rasa-bot:latest
-    working_dir: /app
-    build: "./"
-    restart: always
-    volumes:
-    - ./actions:/app/actions
-    - ./data:/app/data
-    command: bash -c "rm -rf models/* && rasa train && rasa run --enable-api --cors \"*\" --debug"
-    ports:
-    - '5006:5005'
-    public: true
-    networks:
-    - all
-
-  rasa-actions-server:
-    image: rasa-bot:latest
-    working_dir: /app
-    build: "./"
-    restart: always
-    volumes:
-    - ./actions:/app/actions
-    - ./utils:/app/utils
-    command: ["rasa", "run", "actions"]
-    ports:
-    - '5055:5055'
-    networks:
-    - all
-
-networks:
-  all:
-    driver: bridge
-    driver_opts:
-      com.docker.network.enable_ipv6: "true"
+    action_server:
+      container_name: "action_server"
+      build: 
+        context: actions
+      volumes:
+        - ./actions:/app/actions
+        - ./data:/app/data
+      ports:
+        - "5055:5055"
+      command:
+        - start
