--- a/endpoints.yml
+++ b/endpoints.yml
@@ -3,9 +3,9 @@
 # Server where the models are pulled from.
 # https://rasa.com/docs/rasa/model-storage#fetching-models-from-a-server
 
-models:
-  url: https://github.com/sgtest14/convaibot/tree/main/models/
-  wait_time_between_pulls:  null
+# models:
+#   url: https://github.com/sgtest14/convaibot/tree/main/models/
+#   wait_time_between_pulls:  null
 
 # Server which runs your custom actions.
 # https://rasa.com/docs/rasa/custom-actions
