--- a/okteto.yml
+++ b/okteto.yml
@@ -1,10 +1,11 @@
 name: rasa_server
-command: bash
+command: 
+  - bash
 volumes:
-- /root/.cache/pip
+  - /root/.cache/pip
 sync:
-- .:/app
+  - .:/app
 forward:
-- 5006:5006
+  - 5006:5006
 reverse:
-- 8080:8080
+  - 8080:8080
