--- a/okteto.yml
+++ b/okteto.yml
@@ -1,6 +1,7 @@
-name: rasa-server
-command: 
-  - bash
+name: convai
+autocreate: true
+image: 
+command: bash
 volumes:
   - /root/.cache/pip
 sync:
@@ -8,4 +9,4 @@ sync:
 forward:
   - 5006:5006
 reverse:
-  - 8080:8080
+  - 9000:9000
