--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.0'
 services:
     rasa-server:
       image: rasa/rasa:3.1.0-full
-      build: "./"
+      build: './'
       volumes:
       - ./data: /app/data
       - ./actions: /app/actions
@@ -18,7 +18,7 @@ services:
 
     action-server:
       image: rasa/rasa-sdk:3.1.1
-      build: "./"
+      build: './'
       volumes:
         - ./actions:/app/actions
       ports:
