--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,26 @@
 version: '3.0'
 services:
-    rasa:
-      container_name: "rasa_server"
-      build: 
-        context: .
+    rasa-server:
+      image: rasa:3.1.0-full
+      build: './'
       volumes:
-      - "./:/app"
+      - ./data: /app/data
+      - ./actions: /app/actions
+      - ./models: /app/models
       ports: 
-        - "5006:5005"
-      command:
-        - run
+      - '5006:5005'
+      public: true
+      depends_on:
+      - action-server
+      command: rasa run --enable-api
+      working_dir: /app
 
-    action_server:
-      container_name: "action_server"
-      build: 
-        context: actions
+    action-server:
+      image: rasa-sdk:3.1.1
+      build: './'
       volumes:
-        - ./actions:/app/actions
-        - ./data:/app/data
+      - ./actions:/app/actions
       ports:
-        - "5055:5055"
-      command:
-        - start
+      - '5055:5055'
+      command: bash -c "rasa run actions"
+      working_dir: /app
