--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,7 @@ services:
       image: rasa:3.1.0-full
       build: './'
       volumes:
-      - ./data: /app/data
-      - ./actions: /app/actions
-      - ./models: /app/models
+      - ./:/app
       ports: 
       - '5006:5005'
       public: true
